--- a/index.html
+++ b/index.html
@@ -76,16 +76,16 @@
       <div
         class="text-center text-lg-start bg-light rounded shadow-sm p-5 pt-4 mt-5"
       >
-        <h1 class="display-1 d-inline-block text-muted align-middle">
+        <h1 class="display-1 d-inline-block align-middle text-violetto">
           Eveline-R
         </h1>
         <p class="lead d-inline-block mb-0 align-middle">— Feel the Freedom</p>
         <hr class="my-2" />
-        <p class="fs-3 fst-italic text-muted mb-5">
+        <p class="fs-3 fst-italic text-rosetto mb-5">
           Scopri le destinazioni più calde del momento!
         </p>
         <a
-          class="btn btn-info btn-lg px-5 fw-bold text-light"
+          class="btn btn-info btn-violaceo btn-lg px-5 fw-bold text-light"
           href="#day-deal"
           role="button"
           >Prenota ora</a
