--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
         >
       </div>
 
-      <section class="border border-6 my-5 d-flex flex-column" id="week-deal">
+      <section class="my-5 d-flex flex-column" id="week-deal">
         <div class="d-flex justify-content-between">
           <h3>Saldi</h3>
           <button
             type="button"
-            class="btn btn-sm btn-outline-info border-0 align-self-center mb-4"
+            class="btn btn-sm btn-outline-info border-0 align-self-center mb-4 text-violaceo"
             data-bs-toggle="collapse"
             data-bs-target="#collapseWeekDeal"
             aria-expanded="false"
@@ -108,7 +108,7 @@
         </div>
         <div class="row collapse show g-2 g-md-3 g-xl-5" id="collapseWeekDeal">
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card border border-10 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -126,7 +126,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card border border-2 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-            <div class="card border border-2 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -162,7 +162,7 @@
             </div>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-md-none d-lg-block">
-            <div class="card border border-2 border-info">
+            <div class="card border border-6 border-info">
               <img
                 src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
                 class="card-img-top"
@@ -186,7 +186,7 @@
           <h3>Welcome Summer</h3>
           <button
             type="button"
-            class="btn btn-sm btn-outline-info border-0 align-self-center mb-4"
+            class="btn btn-sm btn-outline-info border-0 align-self-center mb-4 text-violaceo"
             data-bs-toggle="collapse"
             data-bs-target="#collapseWelcomeSummer"
             aria-expanded="false"
@@ -310,7 +310,7 @@
         <h3 class="mb-4">Offerta del giorno</h3>
 
         <div class="row">
-          <div class="col col-lg-8">
+          <div class="col col-lg-8 border border-10 border-info">
             <img
               src="https://cache.marriott.com/marriottassets/marriott/MLEWH/mlewh-wow-oceanhaven-1800-hor-wide.jpg?interpolation=progressive-bilinear&downsize=1440px:*"
               class="img-fluid rounded shadow"
